# pyvista-tutorial

./: .buildinfo  .codespellignore  .codespellrc  .flake8  .gitignore  .pre-commit-config.yaml  0_getting_started.ipynb  10_pyvista_in_action.ipynb  1_basic_usage.ipynb  2_what_is_a_mesh.ipynb  3_pyvista_data_model.ipynb  5_animation_generating_figures.ipynb  6_pyvista_and_sphinx.ipynb  8_pyvista_and_vtk.ipynb  9_pyvista_and_qt.ipynb  CNAME  Dockerfile  LICENSE  README.md  SECURITY.md  genindex.html  getting-started-1_00_00.vtksz  getting-started.html  index-1_00_00.vtksz  index.html  objects.inv  pyproject.toml  requirements.txt  requirements_binder.txt  requirements_docs.txt  search.html  searchindex.js  sg_execution_times.html  tutorial.html
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: auto-approve.yml  binder.yml  binder.yml.old  deploy_to_pull_request.yml  doc.yml  docker.yaml  preview_pull_request.yml  reviewdog.yml  update-pr-branch.yml
_downloads/005c92a6df37721135f765060b0e02ee/: c_edl.ipynb
_downloads/019b44a64197e32b38dfb67b0f502d46/: b_clipping.ipynb
_downloads/0685150a3a04df2073c5706f2c8e12ca/: a_lesson_mesh.ipynb
_downloads/0688f908cba271a553ec73b76c7d993e/: e_vtk_next.ipynb
_downloads/06b52721c5bec3531f42bc6816f3c534/: c_edl.py
_downloads/0723a0095ce70873595c9d61f19b7c3d/: b_create-point-cloud.ipynb
_downloads/0d39656e3df303eedc6b2e77829e9d61/: c_create-uniform-grid.ipynb
_downloads/0eeca804d6bce5a99129d1bbf8ecdd0b/: c_create-uniform-grid.py
_downloads/105abf74d9fc87ecad0aba960355eea1/: d_wasm.py
_downloads/167b8aac43549c9132bdf165de9e1e7c/: c_create-uniform-grid.ipynb
_downloads/1798dd69b37935a46283f09a1000af9f/: a_display_options.ipynb
_downloads/184fb73a07eb2dee172f2b98c7ab2350/: c_trame_scalars.py
_downloads/1a4ac159ffc3cbadf04d90b7b0fe051f/: g_orbit.ipynb
_downloads/1cde720fa16205503d1bd3aa65933a9c/: a_getting_started.ipynb
_downloads/1e1662a8d2a6cbdc63ec6b446301cfd6/: b_create-point-cloud.ipynb
_downloads/21af707637822a542735331f92878646/: a_trame_simple.py
_downloads/25ea3d3ddf3b865b4ecd54d3386ebc2d/: c_vtk_algorithms.ipynb
_downloads/26b76c18ca8ad8b6122f0200912ea6bb/: a_lesson_figures.ipynb
_downloads/26c38ef67800ebf8f6e040366e9055f5/: b_create-point-cloud.ipynb
_downloads/2c76762ec34f54ad7113b6b8758cad14/: a_load_examples_exercise.py
_downloads/2d31ef5c62ac42caeb0f3900fc61098f/: b_lighting_mesh.ipynb
_downloads/2d73056797053091ef78446bd2d33444/: jupyter.ipynb
_downloads/327aa7e8bb8b364548d4fce07634f0c8/: a_trame_simple.ipynb
_downloads/340247214a1b2e5c62e01c4b7afb67ce/: e_read-file.ipynb
_downloads/36bafcf7cc13df81dd5668840c3e4138/: a_display_options.py
_downloads/3a83ade9674da19b49ff885efcbb0480/: g_sphere-widget.ipynb
_downloads/3b2de1d43d2d757c852624bfe5b771cc/: f_trame_open_file.ipynb
_downloads/3c73427f7f5a7cf6b39e2c0ad824c336/: b_create_vtk.ipynb
_downloads/3d76b89c9be57f07eb33ed6e3014c74a/: e_plane-widget.ipynb
_downloads/3ec1e9a625c762418707cf69ae6cb184/: b_trame_actor_color.ipynb
_downloads/40ede4f52f85e8eb3fed58e1924f2d5c/: a_display_options.ipynb
_downloads/42acfe96a21f3997ec16abcf1be196c6/: c_line-widget.ipynb
_downloads/46087de24dde47271269b000c0cb8b69/: d_create-tri-surface.ipynb
_downloads/4748ffb212e7c67b59302ef9dee55902/: b_create-point-cloud.py
_downloads/47d0b2b837013d766ae6086c767a2a6b/: a_lesson_basic.py
_downloads/48138b3ef4b67a00726979da3c4b6b02/: b_create_vtk.py
_downloads/4a1d1a60f34a227998c13a104b7275f4/: a_lesson.py
_downloads/4cefb5071082f1ec30510dc4d4c916c3/: a_getting_started.py
_downloads/4e221ee8f7265472fed5b3e3624e45a8/: b_exercise.ipynb
_downloads/4e80d0365f4b3a6b2726d93bef8ea613/: a_load_examples_solution.py
_downloads/4f77ca4de7db767013f0f40d2ff14e4e/: c_compute-normals.ipynb
_downloads/50e54211a0ca90a498b939e2e4c77a5f/: e_read-file.ipynb
_downloads/51442752328abf507b34ad34eadfda74/: b_shading.ipynb
_downloads/51f48f93e4e6caea0eae0cbcdac29fa3/: e_create-uniform-grid.ipynb
_downloads/53ecfedde9de87b5010b4460f6bbfdc6/: c_create-poly.ipynb
_downloads/5455fb371a8345946155a84d4099c2ba/: b_create-point-cloud.ipynb
_downloads/5d3972b75ea2a3785d6f38c2dff23822/: b_trame_vtk.ipynb
_downloads/5d5e808656b5553a49d41596cd042bb1/: jupyter.py
_downloads/5f006ee288b60bb492f64a5968764ca4/: c_edl.ipynb
_downloads/5f63c3307016b656352b98a78d54c4a2/: d_contouring.ipynb
_downloads/62266deaa8706a1f34785e6cca484540/: d_wasm.ipynb
_downloads/6550e6862ca1dc2b1ef8d6b6e8e86ff2/: b_lighting_mesh.ipynb
_downloads/6a111e07c6ad5b27759842d1d4826504/: d_trame_scalar_range.ipynb
_images/plot_directive/: index-1_00_00.vtksz  (+1 more)
_sources/: getting-started.rst.txt  index.rst  index.rst.txt  sg_execution_times.rst  sg_execution_times.rst.txt  tutorial.rst.txt
_static/: asciinema-custom.css  static_viewer.html
binder/: Dockerfile  requirements.txt
doc/: Makefile
en/: .buildinfo  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html  tutorial.html
examples_sphinx/: conf.py  index.rst  plot.py
ja/: .buildinfo  genindex.html  getting-started-1.rst  getting-started-1_00_00.vtksz  getting-started.html  index-1.rst  index-1_00_00.vtksz  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html  tutorial.html
pyvista_tutorial.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1682 files in other folders)
