[project]
dynamic = ['version']
name = "pyvista-tutorial"
requires-python = '>=3.9'

[project.optional-dependencies]
all = ['docs']
docs = [
  'Sphinx==8.1.3',
  'cmocean==4.0.3',
  'colorcet==3.1.0',
  'geovista==0.5.3',
  'imageio-ffmpeg==0.6.0',
  'imageio>=2.5.0',
  'ipygany==0.5.0',
  'ipywidgets==8.1.5',
  'jupyter_sphinx==0.5.3',
  'jupyterlab==4.3.5',
  'lxml==5.3.0',
  'matplotlib==3.10.0',
  'meshio==5.3.5',
  'mypy-extensions==1.0.0',
  'mypy==1.14.1',
  'numpydoc==1.8.0',
  'osmnx==2.0.1',
  'pypandoc==1.15',
  'pytest-sphinx==0.6.3',
  'pyvista-xarray==0.1.7',
  'pyvista[all]==0.44.2',
  'scipy==1.15.1',
  'sphinx-autobuild==2024.10.3',
  'sphinx-book-theme==1.1.3',
  'sphinx-copybutton==0.5.2',
  'sphinx-gallery==0.18.0',
  'sphinx-notfound-page==1.1.0',
  'sphinx_design==0.6.1',
  'sphinxcontrib-websupport==2.0.0',
  'sphinxcontrib.asciinema==0.4.2',
  'trame-client==3.5.2',
  'trame-server==3.3.0',
  'trame-vtk==2.8.14',
  'trame-vuetify==2.8.1',
  'trame==3.7.6',
  'trimesh==4.6.1',
  'typed-ast==1.5.5',
  'typing_extensions==4.12.2',
  'vtk<9.5',
]

[tool.ruff]
exclude = ['.git', 'build', 'dist', 'doc/_build', 'doc/tutorial', 'pycache__']
indent-width = 4
line-length = 100
lint.ignore = ["COM812", "D203", "D212", "E501", "ERA001", "ISC001"]
lint.select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"doc/**" = ["ANN", "ARG", "D", "INP001"]
"tutorial/**" = [
  "ANN",
  "ARG",
  "B015",    # https://github.com/pyvista/pyvista/pull/6014
  "B018",    # https://github.com/pyvista/pyvista/pull/6019
  "D101",
  "D102",
  "D103",
  "D107",
  "D205",
  "D400",
  "D401",
  "D415",
  "E402",
  "F704",
  "INP001",
  "NPY",
  "PLE1142",
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "preserve"
