[project]
dynamic = ['version']
name = "pyvista-tutorial"
requires-python = '>=3.9'

[project.optional-dependencies]
all = ['docs']
docs = [
  'Sphinx==8.2.1',
  'atsphinx-mini18n==0.5.1',
  'cmocean==4.0.3',
  'colorcet==3.1.0',
  'geovista==0.5.3',
  'imageio-ffmpeg==0.6.0',
  'imageio>=2.5.0',
  'ipygany==0.5.0',
  'ipywidgets==8.1.8',
  'jupyter_sphinx==0.5.3',
  'jupyterlab==4.5.1',
  'lxml==6.0.2',
  'matplotlib==3.10.1',
  'meshio==5.3.5',
  'mypy-extensions==1.1.0',
  'mypy==1.19.0',
  'numpydoc==1.9.0',
  'osmnx==2.0.7',
  'pypandoc==1.16.2',
  'pytest-sphinx==0.6.3',
  'pyvista-xarray==0.1.7',
  'pyvista[all]==0.46.4',
  'scipy==1.15.2',
  'sphinx-autobuild==2024.10.3',
  'sphinx-book-theme==1.1.4',
  'sphinx-copybutton==0.5.2',
  'sphinx-gallery==0.19.0',
  'sphinx-notfound-page==1.1.0',
  'sphinx_design==0.6.1',
  'sphinxcontrib-websupport==2.0.0',
  'sphinxcontrib.asciinema==0.4.3',
  'trame-client==3.11.2',
  'trame-server==3.8.1',
  'trame-vtk==2.10.0',
  'trame-vuetify==3.2.0',
  'trame==3.12.0',
  'trimesh==4.10.0',
  'typed-ast==1.5.5',
  'typing_extensions==4.15.0',
  'vtk-xref==0.1.1',
  'vtk<9.6',
]

[tool.ruff]
exclude = ['.git', 'build', 'dist', 'doc/_build', 'doc/tutorial', 'pycache__']
indent-width = 4
line-length = 100
lint.ignore = ["COM812", "D203", "D212", "E501", "ERA001", "ISC001"]
lint.select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"doc/**" = ["ANN", "ARG", "D", "INP001"]
"tutorial/**" = [
  "ANN",
  "ARG",
  "B015",    # https://github.com/pyvista/pyvista/pull/6014
  "B018",    # https://github.com/pyvista/pyvista/pull/6019
  "D101",
  "D102",
  "D103",
  "D107",
  "D205",
  "D400",
  "D401",
  "D415",
  "E402",
  "F704",
  "INP001",
  "NPY",
  "PLE1142",
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "preserve"
